[gd_scene load_steps=5 format=3 uid="uid://be68citslqpuy"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_nvnpl"]
[ext_resource type="Theme" uid="uid://cewabv0bsrunb" path="res://themes/basic_theme.tres" id="1_oswe7"]
[ext_resource type="Texture2D" uid="uid://d2oecdcljtdxm" path="res://sprites/menu/ancient-parchment.png" id="2_upfhq"]
[ext_resource type="AudioStream" uid="uid://c5uqlcbfc1oi2" path="res://sounds/sonatina_letsadventure_1ATaleForTheJourney.ogg" id="4_55u2w"]

[node name="MainMenu" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_nvnpl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1921.0
offset_bottom = 1084.0
color = Color(0.627451, 0.74902, 1, 1)

[node name="Background" type="TextureRect" parent="."]
offset_right = 1923.0
offset_bottom = 1084.0
theme = ExtResource("1_oswe7")
texture = ExtResource("2_upfhq")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.28
shadow_enabled = true
shadow_color = Color(0.00392157, 0.00392157, 0, 1)
height = 0.5
max_distance = 5000.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(300, 40)
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 300, 40)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.121
anchor_top = 0.5
anchor_right = 0.121
anchor_bottom = 0.5
offset_left = 495.68
offset_top = -122.0
offset_right = 964.68
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Start Game"

[node name="LoadButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Load Game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="CreditsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Exit Game"

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -926.0
offset_top = 8.0
offset_right = -17.0
offset_bottom = 249.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 200
text = "Fatal Seas"

[node name="VersionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.136
anchor_top = 0.882
anchor_right = 0.136
anchor_bottom = 0.882
offset_left = 134.88
offset_top = 469.44
offset_right = 327.88
offset_bottom = 518.44
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_oswe7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Version 1.0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_55u2w")
autoplay = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
